pom and aop update