@@ -6,10 +6,10 @@
 	<name>definitions-test</name>
 
 	<properties>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 		<aspectj.version>1.9.9.1</aspectj.version>
-		<spring.version>5.3.24</spring.version>
+		<spring.version>6.0.3</spring.version>
 		<definitions.sources.dir>../definitions/target/classes</definitions.sources.dir>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
 	</properties>
@@ -122,7 +122,7 @@
 				<version>3.0.0-M6</version>
 				<configuration>
 					<argLine>
-						-javaagent:"${settings.localRepository}"/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
+						--add-opens java.base/java.lang=ALL-UNNAMED -javaagent:"${settings.localRepository}"/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
 					</argLine>
 				</configuration>
 			</plugin>
